testdata/baselines/reference/effect-v4/effectInFailure_preview.flows.txt
==== /.src/effectInFailure_preview.ts (3 flows) ====

=== Effect Flow ===
Kind: pipeline
Location: 5:23 - 8:3
Root: Effect.try({\n  try: () => JSON.parse("{"),\n  catch: (error) => Effect.logError(error)\n})
Path (3 nodes):
  [0] root {effect A=any E=Effect<void, never, never> R=never} pipeline
      ==> [subject] -> [1]
  [1] pipeSubject {plain A={ try: () => any; catch: (error: unknown) => Effect<void, never, never>; }} {\n  try: () => JSON.parse("{"),\n  catch: (error) => Effect.logError(error)\n}
      ~> [call] -> [2]
  [2] pipeTransformation {effect A=any E=Effect<void, never, never> R=never} step 0: Effect.try

Nodes (3):
  [0] kind: root
      label: pipeline
      ordinal: 0
      result.kind: effect
      result.A: any
      result.E: Effect<void, never, never>
      result.R: never
  [1] kind: pipeSubject
      label: {\n  try: () => JSON.parse("{"),\n  catch: (error) => Effect.logError(error)\n}
      ordinal: 0
      result.kind: plain
      result.A: { try: () => any; catch: (error: unknown) => Effect<void, never, never>; }
      result.E: 
      result.R: 
  [2] kind: pipeTransformation
      label: step 0: Effect.try
      ordinal: 0
      result.kind: effect
      result.A: any
      result.E: Effect<void, never, never>
      result.R: never
Edges (2):
  0 -> 1 [strong] subject
  1 -> 2 [weak] call

=== Effect Flow ===
Kind: pipeline
Location: 6:13 - 6:29
Root: JSON.parse("{")
Path (3 nodes):
  [0] root {plain A=any} pipeline
      ==> [subject] -> [1]
  [1] pipeSubject {plain A="{"} "{"
      ~> [call] -> [2]
  [2] pipeTransformation {plain A=any} step 0: JSON.parse

Nodes (3):
  [0] kind: root
      label: pipeline
      ordinal: 0
      result.kind: plain
      result.A: any
      result.E: 
      result.R: 
  [1] kind: pipeSubject
      label: "{"
      ordinal: 0
      result.kind: plain
      result.A: "{"
      result.E: 
      result.R: 
  [2] kind: pipeTransformation
      label: step 0: JSON.parse
      ordinal: 0
      result.kind: plain
      result.A: any
      result.E: 
      result.R: 
Edges (2):
  0 -> 1 [strong] subject
  1 -> 2 [weak] call

=== Effect Flow ===
Kind: pipeline
Location: 7:20 - 7:43
Root: Effect.logError(error)
Path (3 nodes):
  [0] root {effect A=void E=never R=never} pipeline
      ==> [subject] -> [1]
  [1] pipeSubject {plain A=unknown} error
      ~> [call] -> [2]
  [2] pipeTransformation {effect A=void E=never R=never} step 0: Effect.logError

Nodes (3):
  [0] kind: root
      label: pipeline
      ordinal: 0
      result.kind: effect
      result.A: void
      result.E: never
      result.R: never
  [1] kind: pipeSubject
      label: error
      ordinal: 0
      result.kind: plain
      result.A: unknown
      result.E: 
      result.R: 
  [2] kind: pipeTransformation
      label: step 0: Effect.logError
      ordinal: 0
      result.kind: effect
      result.A: void
      result.E: never
      result.R: never
Edges (2):
  0 -> 1 [strong] subject
  1 -> 2 [weak] call
